shogun-2 Package as a macOS application